...
        configuration.image = UIImage(named: "email.png")?.imageWith(newSize: .init(width: 20, height: 20))
        configuration.cornerStyle = .capsule
        configuration.title = "Continue with Email"
        configuration.imagePlacement = .leading
        configuration.imagePadding = 10
        button.configuration = configuration
        button.accessibilityLabel = "login_button"
        return button
    }()
    
    private let checkBoxButton: UIButton = {
        let button = UIButton(type: .custom)
        button.setImage(.init(systemName: "square"), for: .normal)
        button.tintColor = MapViewController.tintColor
        button.accessibilityLabel = "checkbox_button"
        return button
    }()
    
    private let termsButton: UIButton = {
        let button = UIButton(type: .custom)
        button.setTitle("I accept Terms & Conditions", for: .normal)
...
